# priscilla_effects_autoposting_bot

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: config.py  main.py  posted.txt  templates.py
